fixed card loader CSS having an extra margin than intended

--- a/public/css/advanced-search.css
+++ b/public/css/advanced-search.css
@@ -41,9 +41,6 @@
     margin-right: 20vw;
 }
 
-#card-loader {
-    margin-left: 6.55vw;
-}
 .post > p {
     margin-left: 2vw;
 }
